; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/aacraid/extr_src.c_aac_dump_fw_fib_iop_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/aacraid/extr_src.c_aac_dump_fw_fib_iop_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aac_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@aac_fib_dump = common dso_local global i32 0, align 4
@AAC_OPTION_SUPPORTED3_IOP_RESET_FIB_DUMP = common dso_local global i32 0, align 4
@IOP_RESET_FW_FIB_DUMP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.aac_dev*)* @aac_dump_fw_fib_iop_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aac_dump_fw_fib_iop_reset(%struct.aac_dev* %0) #0 {
  %2 = alloca %struct.aac_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.aac_dev* %0, %struct.aac_dev** %2, align 8
  %4 = load i32, i32* @aac_fib_dump, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %21

7:                                                ; preds = %1
  %8 = load %struct.aac_dev*, %struct.aac_dev** %2, align 8
  %9 = getelementptr inbounds %struct.aac_dev, %struct.aac_dev* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @AAC_OPTION_SUPPORTED3_IOP_RESET_FIB_DUMP, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %7
  br label %21

17:                                               ; preds = %7
  %18 = load %struct.aac_dev*, %struct.aac_dev** %2, align 8
  %19 = load i32, i32* @IOP_RESET_FW_FIB_DUMP, align 4
  %20 = call i32 @aac_adapter_sync_cmd(%struct.aac_dev* %18, i32 %19, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32* null, i32* null, i32* null, i32* null, i32* null)
  br label %21

21:                                               ; preds = %17, %16, %6
  ret void
}

declare dso_local i32 @aac_adapter_sync_cmd(%struct.aac_dev*, i32, i32, i32, i32, i32, i32, i32, i32*, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
